 * Allow new users to activate via OpenID (#1029)
 * Update dragon.maxgigapop SSL cert (#1033)
 * Remove disabled users from geni-ops-report (#1037)
 * Assure cleanup of tempfiles from invoke_omni_function (#978)
 * Ensure that operators and non-operators get the kmactivate page when 
  in maintenance mode and tool is deauthorized (#944)

== 2.14 ==
 * Use proc_open not popen to spawn omni calls, allowing us
   to watch the output and timeout long running calls. Current timeout
   set to 12 minutes. Be sure to propagate the 'failed' message back
   to client calls when the call times out. (#863)
 * Add a New to GENI? link on landing page (#994)
 * Remove obsolete scripts (#999)
 * Add Jacks viewer to details page (#1011)
 * Update ION AM SSL certificate (#1012)
 * Add beta Jacks RSpec editor for adding resources. (#1013)
 * Use HTTPS URLs for map data to avoid mixed content warning (#1014)
 * Avoid busy waits and failing to read all output from spawned Omni
   calls. (#1016)
 * Remove old non-AJAX listresources call from details page. Only call
   it once. (#1017)
 * Refactor listresources so that only one call is made and Jacks is
   shown by defualt. (#1020)
 * Remove PUBLIC_KEYs from DETAILS_PUBLIC (#1021)
 * Incorporate xml-signer 0.7 (#1022)
 * Update wording on join project page (#1023)
 * Update wording on SSH keys page (#1024)
 * Changed listresources page to allow multiple Jacks windows (#1025)
 * Allow multiple Jacks canvases on the list resources page (#1027)

== 2.13 ==
 * Provide UI for renewing certificates (#241)
 * Remove slice expiration from sliver renewal entry (#1010)

== 2.12 ==
 * Delete temporary km files (#979)
 * Emails sent from portal on behalf of experimenter need
   the from address quoted, specifically where the name of the 
   experimenter is an email address because no better name 
   is available. (#988)
 * Show each GENI site on map (#995)
 * Remove unused readyToLogin page (#996)
 * Delete unused script geni-renew-slice (#997)